--- a/Informacion.html
+++ b/Informacion.html
@@ -33,7 +33,12 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis quos distinctio deleniti ab aut dolorum reiciendis, dolores atque. Velit distinctio, fugiat ullam esse et reprehenderit natus sed rem. Provident quis molestiae eos veniam minima cupiditate aperiam sit facilis, cum dolorem vero odio et dolores qui omnis eligendi soluta officiis corporis.</p>
 		</div>
 	</section>
-	
+	<section id="contact">
+		<div class="container-fluid text-center">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d61918.23561633446!2d-87.22186239999999!3d14.0836864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2shn!4v1584077214973!5m2!1ses!2shn" width="600" height="450" frameborder="0" style="border:0;"
+        allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		</div>
+	</section>
 	
 	
 	
