--- a/Color-scrip.html
+++ b/Color-scrip.html
@@ -90,8 +90,10 @@
 	</div>	
 </footer>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/bootstrap.min.js.map"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.fancybox.min.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	
 </body>
 </html>
